fixed display issues on small mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,16 @@
   background-repeat: no-repeat;
   background-color: black;
   padding: 30px 0px 0px;
+  height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
+}
+
+.rosterDisplay{
+  width: 100%;
+  margin: auto;
 }
 
 .App-header {
@@ -26,18 +32,22 @@
 }
 
 .loading-banner{
-  background-color: white;
+  background-color: transparent;
   color: black;
   width: 100%;
   margin-top: -30px;
   padding-top: 100px;
 }
 
+.loading{
+  width: 100%;
+}
+
 .buttongrp{
   margin: auto;
   display: block;
   height: 50px;
-  width: 35%;
+  width: fit-content;
   background-color: rgb(248,249,250);
   vertical-align: top;
   font-size: 25px;
@@ -47,20 +57,24 @@
   white-space: nowrap;
 }
 
-.sortButton{
+.sortButton.btn.btn-light{
   border: none;
   box-sizing: border-box;
   background-color: rgb(248,249,250);
   color: black;
-  font-size: 25px;
+  font-size: 22px;
   height: 45px;
-  width: 20%;
   vertical-align: middle;
+  text-align: center;
+}
+
+.sortButton.btn.btn-light:hover{
+    background-color: lightgray;
 }
 
 .sortTab{
   color: black;
-  font-size: 20px;
+  font-size: 22px;
   height: 45px;
   margin: 0px 0px 0px -1px;
   padding: 8px 16px;
@@ -70,29 +84,10 @@
   border-bottom-left-radius: 5px;
 }
 
-@media screen and (max-width: 1900px) {
-  .buttongrp{
-    width:40%;
-    white-space: nowrap;
-  }
-  .sortMessage{
-    text-align: left;
-    margin-left: 35px;
-  }
-  .sortButton{
-    border: none;
-    box-sizing: border-box;
-    background-color: rgb(248,249,250);
-    color: black;
-    font-size: 22px;
-    width: 20%;
-    vertical-align: top;
-  }
-}
 
 @media screen and (max-width: 1600px) {
   .buttongrp{
-    width:45%;
+    width:30%;
     white-space: nowrap;
   }
   .sortMessage{
@@ -100,48 +95,25 @@
     margin-left: 35px;    
     font-size: 22px;
   }
-  .sortButton{
+  .sortButton.btn.btn-light{
     border: none;
     box-sizing: border-box;
     background-color: rgb(248,249,250);
     color: black;
     font-size: 22px;
-    width: 20%;
-    vertical-align: middle;
-  }
-}
-
-@media screen and (max-width: 1400px) {
-  .buttongrp{
-    width:45%;
-    white-space: nowrap;
-
-  }
-  .sortMessage{
-    text-align: left;
-    margin-left: 35px;    
-    font-size: 20px;
-  }
-  .sortButton{
-    border: none;
-    box-sizing: border-box;
-    background-color: rgb(248,249,250);
-    color: black;
-    font-size: 20px;
-    width: 20%;
     vertical-align: middle;
   }
 }
 
 @media screen and (max-width: 1200px) {
   .buttongrp{
-    width:65%;
+    width:fit-content;
     white-space: nowrap;
   }
   .sortMessage{
     text-align: left;
     margin-left: 35px;  }
-  .sortButton{
+  .sortButton.btn.btn-light{
     border: none;
     box-sizing: border-box;
     background-color: rgb(248,249,250);
@@ -152,17 +124,16 @@
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 992px) {
   .buttongrp{
-    width:85%;
+    width:fit-content;
     white-space: nowrap;
   }
-  .sortMessage{
+  .sortTab{
     text-align: left;
-    margin-left: 35px;    
-    font-size: 16px;
+    font-size: 18px;
   }
-  .sortButton{
+  .sortButton.btn.btn-light{
     border: none;
     box-sizing: border-box;
     background-color: rgb(248,249,250);
@@ -175,13 +146,13 @@
 
 @media screen and (max-width: 780px) {
   .buttongrp{
-    width:90%;
+    width:fit-content;
     white-space: nowrap;
   }
   .sortMessage{
     font-size: 16px;
   }
-  .sortButton{
+  .sortButton.btn.btn-light{
     border: none;
     box-sizing: border-box;
     background-color: rgb(248,249,250);
@@ -192,34 +163,57 @@
   }
 }
 
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 556px) {
+  .rosterDisplay{
+    width: 90%;
+    font-size: 18px;
+  }
   .buttongrp{
-    display: inline-block;
-    height: 45px;
     width: 100%;
+    margin-left: 0px;
     background-color: rgb(248,249,250);
-    vertical-align: middle;
-    font-size: 12px;
+    font-size: 16px;
     border: 2px solid black;
     box-shadow: black 1px 1px 1px;
     border-radius: 8px;
-    white-space: nowrap;
   }
-  .sortMessage{
-    text-align: left;
-    margin-left: 35px;
-    vertical-align: middle;
-    text-align: center;
-    font-size: 14px;
+  .sortTab{
+    font-size: 16px;
+    padding: 11px;
   }
-  .sortButton{
+  .sortButton.btn.btn-light{
     border: none;
     box-sizing: border-box;
     background-color: rgb(248,249,250);
     color: black;
-    font-size: 12px;
-    height: 45px;
-    width: 20%;
+    font-size: 16px;
+    vertical-align: top;
+  }
+}
+
+@media screen and (max-width: 280px) {
+  .rosterDisplay{
+    width: 90%;
+    font-size: 18px;
+  }
+  .buttongrp{
+    width: 100%;
+    margin-left: 0px;
+    background-color: rgb(248,249,250);
+    font-size: 10px;
+    border: 2px solid black;
+    box-shadow: black 1px 1px 1px;
+    border-radius: 8px;
+  }
+  .sortTab{
+    font-size: 10px;
+  }
+  .sortButton.btn.btn-light{
+    border: none;
+    box-sizing: border-box;
+    background-color: rgb(248,249,250);
+    color: black;
+    font-size: 10px;
     vertical-align: top;
   }
 }
