--- a/src/roster.css
+++ b/src/roster.css
@@ -1,6 +1,6 @@
 .character-container{
 	display: inline-grid;
-	margin: 30px 30px 30px 30px;
+	margin: 60px;
 	height: 275px;
 	width: 160px;
 	color: black;
@@ -8,11 +8,33 @@
 	background-image: url('questframe.png');
 	border-radius: 10px;
 	box-shadow: 5px 5px 5px;
+	transition: linear 300ms;
+}
+
+.text-span{
+	width: 60%;
+	height: 60%;
+	margin-top: 5px;
+	margin: auto;
+	background: linear-gradient(to right, #eff1f3 4%, #e2e2e2 25%, #eff1f3 36%);
+	border-radius: 4px;
+	box-shadow: 0px 2px 5px;
+	display: block;
+}
+
+.img-span{
+	margin: auto;
+	width: 91%;
+	filter: brightness(.95);
+	border-radius: 10px;
+	background: linear-gradient(to right, #eff1f3 4%, #e2e2e2 25%, #eff1f3 36%);
+	height: 73px;
+	box-shadow: 0px 2px 5px;
 }
 
 .character-container:hover{
 	transform: scale(1.05);
-	transition: linear 200ms;
+	transition: linear 400ms;
 	filter: brightness(1.2);
 }
 
@@ -51,7 +73,7 @@ span{
 }
 
 .character-img:hover {
-	transition: linear 200ms;
+	transition: linear 400ms;
 	filter: brightness(1.2);
 	transform: scale(1.1);
 }
@@ -60,4 +82,5 @@ span{
 	width: 91%;
 	filter: brightness(.95);
 	border-radius: 10px;
+	transition: linear 300ms;
 }
